--- a/puppetmaster/modules/ntp/Rakefile
+++ b/puppetmaster/modules/ntp/Rakefile
@@ -9,3 +9,11 @@ begin
 rescue Gem::LoadError
   task :default => :rspec
 end
+
+
+# require 'rake'
+# require 'rspec/core/rake_task'
+# 
+# RSpec::Core::RakeTask.new(:spec) do |t|
+#   t.pattern = 'spec/*/*_spec.rb'
+# end
